# Taxocli

./: Cargo.toml  README.md
src/: main.rs
src/Api/: API.rs  mod.rs
src/Cli/: Runtime.rs  mod.rs
src/Config/: Configuration.rs  mod.rs
src/Latency/: Latencychecker.rs  mod.rs
src/Reptilia/: Repts.rs  mod.rs
src/Support/: Support.rs  mod.rs
tests/: api_test.rs
